Maybe fixed box alignment ?

--- a/style.css
+++ b/style.css
@@ -42,7 +42,9 @@ h1 {
   padding: 10px 15px;
   height: auto;
   width: 400px;
-  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
  
